# health-data-exchange

./: Cargo.toml  README.md  dfx.json  package-lock.json  package.json
src/health-data-exchange-backend/: Cargo.toml  health-data-exchange-backend.did
src/health-data-exchange-backend/src/: handlers.rs  lib.rs  models.rs  storage.rs
src/health-data-exchange-frontend/: package-lock.json  package.json  vite.config.js
src/health-data-exchange-frontend/src/: App.jsx
src/health-data-exchange-frontend/src/components/dashboards/: MyUploadsTable.jsx  PatientDashboard.jsx  ProviderDashboard.jsx  ResearcherDashboard.jsx  myUploads.css  patient.css  practice  provider.css  researcher.css
src/health-data-exchange-frontend/src/components/pages/: LandingPage.jsx  LoginPage.jsx  RegistrationPage.jsx  landing.css  login.css
src/health-data-exchange-frontend/src/components/shared/: Header.jsx  Modal.jsx  StatCard.jsx  header.css  modal.css  statcard.css
src/health-data-exchange-frontend/src/tests/: App.test.jsx
src/health-data-exchange-frontend/src/types/: index.js
src/health-data-exchange-frontend/src/utils/: actorUtils.js  canister.js  mockData.js
