[package]
name = "health_data_exchange_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.10.0"
ic-cdk-macros = "0.6.10"
candid = "0.9.6"
serde = { version = "1.0", features = ["derive"]}
sha2 = "0.10"